# nota

./: Cargo.toml  LICENSE  Node.toml  README.md
assets/: dark_theme.ron
src/: base_state.rs  data.rs  keys.rs  main.rs  main_view.rs  note_state.rs  note_view.rs  overview_state.rs  overview_view.rs
static/: index.html
